# bai2-reader

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  Taskfile.yml  index.html  objects.inv  pyproject.toml  search.html
.github/config/: assign.yaml  laberler.yaml
.github/workflows/: build.yaml  docs.yaml  publish.yaml  tests.yaml
app/bai2_reader/: __init__.py
app/bai2_reader/samples/: sample_2.bai  sample_3.bai  sample_4.bai  sample_5.bai
app/bai2_reader/src/: __init__.py  cli.py  enums.py  exceptions.py  models.py  reader.py
app/bai2_reader/ui/: __init__.py  about.py  bai2_reader_app.py  cli.py  home.py
app/src/bai2_reader/: __init__.py  cli.py  enums.py  logger.py  models.py  reader.py
app/src/samples/: sample_1.bai
app/src/ui/: about.py  bai2_reader_app.py  examples.py
app/tests/: test_bai2_reader.py  test_importable.py
changelog/: index.html
ci/: generate_docs.py  rewrite_pyproject_toml_to_pep.py
configs/: mkdocs.yml  requirements.txt
contribute/: index.html
docs/: changelog.md  contribute.md  index.md  pydantic-and-enums.md
docs/configs/: .readthedocs.yaml  mkdocs.yml  mkdocs_material.yml  requirements.txt
pydantic-and-enums/: index.html
search/: search_index.json
